--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@ src = "src"
 test = "test"
 out = "out"
 libs = ["lib"]
-remappings = ["@solmate/=lib/solmate/", "ds-test/=lib/ds-test/src/", "@openzeppelin/=lib/openzeppelin-contracts/"]
+remappings = ["@rari-capital/solmate/=lib/solmate/", "ds-test/=lib/ds-test/src/", "@openzeppelin/=lib/openzeppelin-contracts/"]
 libraries = []
 cache = true
 force = false
