--- a/foundry.toml
+++ b/foundry.toml
@@ -17,14 +17,14 @@ optimizer = true
 optimizer_runs = 1000000
 # verbosity = 0
 # ignored_error_codes = []
-# fuzz_runs = 256
+fuzz_runs = 100
 # ffi = false
 # sender = "0x00a329c0648769a73afac7f9381e08fb43dbea72"
 # tx_origin = "0x00a329c0648769a73afac7f9381e08fb43dbea72"
 # initial_balance = "0xffffffffffffffffffffffff"
 # block_number = 0
 # chain_id = 1
-# gas_limit = 9223372036854775807
+# gas_limit = 30000000
 # gas_price = 0
 # # block_base_fee_per_gas = 0
 # block_coinbase = "0x0000000000000000000000000000000000000000"
